<resources>
    <string name="app_name">feature-auth</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_info">A grievance redressal portal for everyone to report actions and to manage the schemes.</string>
    <string name="login_phno_input_hint">Enter Phone Number</string>
    <string name="login_request_otp_button_text">Request OTP</string>
    <string name="login_create_account_button_text">Create an account</string>
    <string name="otp_submit_button_text">Submit OTP</string>
    <string name="otp_resend_button_text">Resend OTP</string>
    <string name="register_create_account">Create Account</string>
    <string name="register_info">Time to create the best profile</string>
    <string name="register_enter_aadhaar_card_hint">Enter Aadhaar Card</string>
    <string name="register_enter_name_hint">Enter Name</string>
    <string name="register_enter_dob_hint">Enter Date Of Birth</string>
    <string name="register_login_button_text">Already have an account</string>
    <string name="register_create_account_button_text">Create Account</string>
</resources>
