<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otp.OtpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <TextView
            style="@style/TextBold36.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="75dp"
            android:text="@string/login_welcome" />

        <TextView
            style="@style/TextMedium18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/login_info" />

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="32dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:foregroundGravity="center"
            android:gravity="center"
            android:inputType="number"
            android:itemBackground="@drawable/bg_otpview"
            android:textColor="@android:color/black"
            app:itemCount="6"
            app:lineColor="@color/colorPrimary"
            app:viewType="none"
            tools:text="123456" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/otp_button_submit"
            style="@style/ButtonBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/otp_submit_button_text"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:id="@+id/otp_button_resend"
            style="@style/TextMedium18.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_ripple"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_refresh_black_24dp"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/otp_resend_button_text" />

    </LinearLayout>

</ScrollView>